fixed navbar and horizontal scrolling effect

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.slide {
+  height: 100vh;
+  padding-top: 60px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* a {
+  pointer-events: auto;
+} */
